[gd_scene load_steps=6 format=2]

[ext_resource path="res://Cenas/Menus/MenuPrincipal.gd" type="Script" id=1]
[ext_resource path="res://Public/backgroundMenuSprite1.jpeg" type="Texture" id=2]
[ext_resource path="res://Public/backgroundMenuSprite3.jpeg" type="Texture" id=3]
[ext_resource path="res://Public/backgroundMenuSprite2.jpeg" type="Texture" id=4]

[sub_resource type="AnimatedTexture" id=1]
flags = 4
frames = 3
frame_0/texture = ExtResource( 2 )
frame_0/delay_sec = 1.0
frame_1/texture = ExtResource( 4 )
frame_1/delay_sec = 1.0
frame_2/texture = ExtResource( 3 )
frame_2/delay_sec = 1.0

[node name="MenuPrincipal" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_right = 2.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 1 )
expand = true

[node name="BotaoNovoJogo" type="Button" parent="."]
margin_left = 425.0
margin_top = 103.0
margin_right = 563.0
margin_bottom = 163.0
text = "__Novo Jogo__"
flat = true

[node name="BotaoOpcoes" type="Button" parent="."]
margin_left = 425.0
margin_top = 180.0
margin_right = 563.0
margin_bottom = 200.0
text = "__ Opcoes __"
flat = true

[node name="BotaoSair" type="Button" parent="."]
margin_left = 424.0
margin_top = 245.0
margin_right = 562.0
margin_bottom = 265.0
text = "__ Sair __"
flat = true

[connection signal="pressed" from="BotaoNovoJogo" to="." method="_on_BotaoNovoJogo_pressed"]
[connection signal="pressed" from="BotaoOpcoes" to="." method="_on_BotaoOpcoes_pressed"]
[connection signal="pressed" from="BotaoSair" to="." method="_on_BotaoSair_pressed"]
